fix: fix card with long quote overlapping with nav bar

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,11 +1,15 @@
-body{
-    margin: 0;
-    min-height: 100%;
-    width: 100%;
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    flex: 1;
+    justify-content: center;
 }
-.row {
-    width: 100%;
-    position: absolute;
-    top: 64px;
-    bottom: 0;
+
+.wrapper div {
+    align-items: stretch;
+}
+
+.card {
+    align-self: center;
 }
